--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -164,7 +164,53 @@
     "your_email_address": "عنوان بريدك الإلكتروني *",
     "subject": "الموضوع",
     "message": "الرسالة",
-    "send_message": "إرسال الرسالة"
+    "send_message": "إرسال الرسالة",
+    "step_1_title": "قم بنشر منتجك على الإنترنت في لمحة",
+    "step_1_description": "أضف صوراً جذابة، وصف منتجك بعناية، وحدد سعراً تنافسياً.",
+    "step_2_title": "قم بتحضير منتجك للتسليم",
+    "step_2_description": "قم بتعبئة منتجك بعناية. سيأتي سائق التوصيل لأخذها مباشرة منك، دون جهد من جانبك.",
+    "step_3_title": "استلم أموالك بسرعة",
+    "step_3_description": "بعد 24 ساعة من التسليم الناجح، سيتم دفع المبلغ المتفق عليه وفقاً للشروط المتفق عليها.",
+    "step_4_title": "الكرة في ملعبك!",
+    "step_4_description": "انضم إلى شوب<span class=\"color\">إن</span> اليوم، وبيع منتجاتك، واكتشف الكنوز الفريدة التي يمكنك شراؤها.",
+    "explore_your_way_title": "استكشف بالطريقة التي تناسبك",
+    "explore_your_way_description": "استخدم بحثنا متعدد المعايير لتحديد رغباتك أو دع نفسك تتفاجأ أثناء تصفح إعلانات الآخرين من شوب<span class=\"color\">إن</span> حتى تجد المنتج المثالي.",
+    "add_to_favorites_title": "أضف إلى مفضلتك بنقرة واحدة",
+    "add_to_favorites_description": "هل وجدت منتجاً يعجبك؟ اضغط على القلب الصغير لإضافته مباشرة إلى قائمة المفضلة الخاصة بك ولا تفوت فرصة مشاهدة منتجك المفضل.",
+    "validate_cart_title": "أتمم طلبك في لحظة",
+    "validate_cart_description": "وهكذا، أصبحت العملية سهلة للغاية والدفع عند التسليم.",
+    "receive_package_title": "استلم منتجك دون عناء",
+    "receive_package_description": "بمجرد تأكيد طلبك، سيقوم أحد السائقين بتسليم المنتج مباشرة إلى باب منزلك. شوب<span class=\"color\">إن</span> يجعل التسوق أكثر راحة ومتعة!",
+    "general_conditions_title": "الشروط العامة",
+    "registration_title": "التسجيل على الموقع:",
+    "registration_description": "عند التسجيل في موقع شوب<span class=\"color\">إن</span>، يجب على المستخدم ملء نموذج يحتوي على اسمه الأول، واسم العائلة، واسم المستخدم، والبريد الإلكتروني، ورقم الهاتف، وتاريخ الميلاد. يمكن للمستخدم تعديل أو حذف حسابه في أي وقت.",
+    "seller_commission_intro": "يوافق البائع على أن يحتفظ شوب<span class=\"color\">إن</span> بعمولة على السعر الإجمالي للمنتج كما يلي:",
+    "luxury_brand_commission": "العلامة التجارية الفاخرة (شوب<span class=\"color\">إن</span> Luxury): 10% من سعر المنتج",
+    "other_category_commission": "أي فئة أخرى: 7% من سعر المنتج",
+    "delivery_fees_not_included": "لا تشمل رسوم التوصيل في قاعدة حساب العمولة. بعد استلام المشتري للمنتج، سيقوم شوب<span class=\"color\">إن</span> بدفع سعر المنتج للبائع مخصومًا منه العمولة في غضون 3 أيام. للحصول على المدفوعات، يجب على البائع تقديم إثبات هويته وبياناته البنكية مع صورة للتحقق الضروري (CIN وRIB).",
+    "confidentiality_title": "3. السرية:",
+    "confidentiality_content": "يقوم شوب<span class=\"color\">إن</span> بجمع وتخزين واستخدام بعض البيانات الشخصية للمستخدمين (الاسم الأول، الاسم الأخير، رقم الهاتف، المدينة، والبريد الإلكتروني) بالإضافة إلى بيانات الموقع الجغرافي للمستخدمين. يضمن شوب<span class=\"color\">إن</span> حماية المعلومات الشخصية للمستخدمين ضد أي أنشطة غير قانونية.",
+    "cookies_title": "4. الكوكيز:",
+    "cookies_content": "يستخدم الموقع ملفات تعريف الارتباط لتمييز المستخدمين / الزوار عن المستخدمين الآخرين للموقع لمساعدة شوب<span class=\"color\">إن</span> في تحسين تجربتهم أثناء تصفح الموقع.",
+    "articles_for_sale_title": "5. المقالات للبيع:",
+    "articles_for_sale_content": "يتعهد البائع/البائعة بضمان أن أي عنصر معروض للبيع خالٍ من العيوب (بقع، ثقوب أو تمزقات...). يحق للمشتري/المشتريّة الذي يتلقى منتجًا في هذه الحالة إرجاعه. يُحظر إعادة بيع المنتجات المقلدة أو المحظورة من قبل القانون. يتعهد البائع/البائعة بتوفير صور حقيقية للمنتج المعروض للبيع. يجب أن تتطابق وصف المنتج مع خصائصه الفعلية. لشركة شوب<span class=\"color\">إن</span> كامل الحق في طلب من البائع/البائعة تغيير أو حذف الإعلان أو إخباره بأن شوب<span class=\"color\">إن</span> ستقوم بذلك مباشرة في حالة حدوث خطأ (مثال: خطأ في الفئة).",
+
+    "return_title": "6. الإرجاع:",
+    "return_content": "في حالة فشل التسليم يجب أن يكون البائع/البائعة متاحًا لاستلام المنتج المرتجع.",
+    "luxury_title": "7. شوب<span class=\"color\">إن</span> Luxury:",
+    "luxury_description": "يجب أن يتجاوز العنصر الذي ينتمي إلى فئة شوب<span class=\"color\">إن</span> LUXURY :",
+    "luxury_price_condition": "أكثر من 800 <sup>{{ __('currency') }}</sup>",
+    "luxury_authentication_condition": "يجب أن يتم التحقق من صحة العنصر قبل تسليمه للمشتري",
+    "luxury_category_condition": "سيتم:",
+    "luxury_symbol_authentication": "التحقق من صحته بواسطة رمز",
+    "luxury_sale_steps": "خطوات بيع عنصر ينتمي إلى فئة شوب<span class=\"color\">إن</span> LUXURY:",
+    "luxury_publish_item": "نشر العنصر الفاخر للبيع",
+    "luxury_purchase_confirmation": "بعد تأكيد الشراء، سيقوم فريقنا بإبلاغك بالبيع وسيتم تحديد موعد للاستلام",
+    "luxury_item_authentication": "سيتم التحقق من صحة العنصر من قبل فريقنا",
+    "luxury_item_delivery": "إذا كان العنصر أصليًا، سيتم تسليمه خلال 3 أيام",
+    "luxury_payment_confirmation": "بعد استلام العنصر من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
+    "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">إن</span> LUXURY:",
+    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">إن</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">إن</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة."
 
 
 
