--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -159,7 +159,53 @@
     "your_email_address": "Your Email Address *",
     "subject": "Subject",
     "message": "Message",
-    "send_message": "Send Message"
+    "send_message": "Send Message",
+    "step_1_title": "Post your item online in a flash",
+    "step_1_description": "Add attractive photos, describe your item carefully, and set a competitive price.",
+    "step_2_title": "Prepare your item for delivery",
+    "step_2_description": "Carefully pack your item. A delivery driver will come to collect it from you, with no effort on your part.",
+    "step_3_title": "Receive your payment quickly",
+    "step_3_description": "24 hours after successful delivery, your payment will be made via the agreed-upon terms.",
+    "step_4_title": "It’s your turn!",
+    "step_4_description": "Join SHOP<span class=\"color\">IN</span> today, sell your items, and discover unique treasures to buy.",
+    "explore_your_way_title": "Explore Your Way",
+    "explore_your_way_description": "Use our multi-criteria search to refine your desires or let yourself be surprised by browsing the listings of other SHOP<span class=\"color\">IN</span>ERS until you find the perfect match.",
+    "add_to_favorites_title": "Add to your favorites with one click",
+    "add_to_favorites_description": "Found something you like? Tap the little heart to instantly add it to your favorites list and never lose sight of your gems.",
+    "validate_cart_title": "Validate your cart in no time",
+    "validate_cart_description": "That's it, it's that simple, and the payment is made upon delivery.",
+    "receive_package_title": "Receive your package effortlessly",
+    "receive_package_description": "Once your order is confirmed, a delivery person will bring it directly to your door. SHOP<span class=\"color\">IN</span> makes your shopping as convenient as it is enjoyable!",
+    "general_conditions_title": "General Conditions",
+    "registration_title": "Registration on the website:",
+    "registration_description": "When registering on the SHOP<span class=\"color\">IN</span> website, the user must fill out a form containing their first name, last name, username, email, phone number, and date of birth. The user can modify or delete their account at any time.",
+    "seller_commission_intro": "The seller authorizes SHOP<span class=\"color\">IN</span> to retain a commission on the total price of the item as follows:",
+    "luxury_brand_commission": "Luxury Brand (SHOP<span class=\"color\">IN</span> Luxury): 10% of the item price",
+    "other_category_commission": "Any other category: 7% of the item price",
+    "delivery_fees_not_included": "Delivery fees are not included in the commission calculation base. Once the item is received by the buyer, SHOP<span class=\"color\">IN</span> will pay the seller the price of the item minus the commission within 3 days. To receive their payment, the seller must provide proof of identity and bank details with a photo for necessary verification (CIN and RIB).",
+    "confidentiality_title": "3. Confidentiality:",
+    "confidentiality_content": "SHOP<span class=\"color\">IN</span> collects, stores, and uses certain personal data of users (first name, last name, phone number, city, and email), along with users' location data. SHOPIN ensures that users' personal information is protected against any illegal activities.",
+    "cookies_title": "4. Cookies:",
+    "cookies_content": "The site uses cookies to distinguish users/visitors from other site users in order to help SHOP<span class=\"color\">IN</span> improve their experience while navigating the site.",
+    "articles_for_sale_title": "5. Articles for Sale:",
+    "articles_for_sale_content": "The seller commits to ensuring that any item listed for sale is free from defects (stains, holes, or tears...). The buyer, upon receiving such an item, has the right to return it. It is forbidden to resell counterfeit or illegal items. The seller agrees to provide real photos of the item being sold. The description of this item must correspond to its actual characteristics. SHOPIN has full rights to request the seller to change or remove their listing, or inform them that SHOPIN will do it directly in case of an error (e.g., incorrect category).",
+
+    "return_title": "6. Return:",
+    "return_content": "In case of delivery failure, the seller must be available to receive the returned item.",
+    "luxury_title": "7. SHOP<span class=\"color\">IN</span> Luxury:",
+    "luxury_description": "An item belonging to the SHOP<span class=\"color\">IN</span> LUXURY category must:",
+    "luxury_price_condition": "exceed 800 <sup>{{ __('currency') }}</sup>",
+    "luxury_authentication_condition": "be authenticated before delivery to the buyer",
+    "luxury_category_condition": "An item belonging to the SHOP<span class=\"color\">IN</span> LUXURY category will be:",
+    "luxury_symbol_authentication": "authenticated by a symbol",
+    "luxury_sale_steps": "Steps for selling an item in the SHOP<span class=\"color\">IN</span> LUXURY category:",
+    "luxury_publish_item": "Publish the luxury item for sale",
+    "luxury_purchase_confirmation": "After purchase confirmation, our team will inform you of the sale, and an appointment will be scheduled for pick-up",
+    "luxury_item_authentication": "The item will be authenticated by our team",
+    "luxury_item_delivery": "If the item is authentic, it will be delivered within 3 days",
+    "luxury_payment_confirmation": "After the item is received by the buyer, your payment will be credited to your account within 24 hours",
+    "luxury_return_policy": "Return policy for SHOP<span class=\"color\">IN</span> LUXURY items:",
+    "luxury_authentication_policy": "SHOP<span class=\"color\">IN</span> maintains a strict policy against counterfeits. If counterfeit products, defective items, illicit duplicates (copied, reproduced, or manufactured illegally), or items violating intellectual property rights are received, our team will contact the seller by email or phone to inform them of the return of the item, providing conclusive evidence of the counterfeit, and the order will be canceled. The item will be permanently removed from the SHOP<span class=\"color\">IN</span> catalog. Return and authentication fees of 120 dirhams will be charged to the seller. The seller's information will be recorded, prohibiting them from selling counterfeit products in the future. To avoid inconvenience, the seller must provide authentic and unchanged documents such as the certificate of authenticity, invoice, or price tag. Buyers are encouraged to carefully read the full description of the item and inquire in the comments section if the item is authentic or a replica."
   }
 
 }
