--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -157,7 +157,53 @@
     "your_email_address": "Votre adresse email *",
     "subject": "Sujet",
     "message": "Message",
-    "send_message": "Envoyer le message"
+    "send_message": "Envoyer le message",
+    "step_1_title": "Mettez votre article en ligne en un clin d'œil",
+    "step_1_description": "Ajoutez des photos attrayantes, décrivez votre article avec soin, et fixez un prix compétitif.",
+    "step_2_title": "Préparez votre article pour la livraison",
+    "step_2_description": "Emballez soigneusement votre article. Un livreur viendra le récupérer directement chez vous, sans effort de votre part.",
+    "step_3_title": "Recevez votre argent rapidement",
+    "step_3_description": "24 heures après la livraison réussie, votre paiement sera effectué par versement selon les modalités convenues.",
+    "step_4_title": "C’est à vous de jouer !",
+    "step_4_description": "Rejoignez SHOP<span class=\"color\">IN</span> dès aujourd’hui, vendez vos articles, et découvrez des trésors uniques à acheter.",
+    "explore_your_way_title": "Explorez à votre façon",
+    "explore_your_way_description": "Utilisez notre recherche multicritères pour affiner vos envies ou laissez-vous surprendre en parcourant les annonces des autres SHOP<span class=\"color\">IN</span>ERS jusqu’à ce que vous tombiez sur le coup de cœur parfait.",
+    "add_to_favorites_title": "Ajoutez vos favoris d’un simple clic",
+    "add_to_favorites_description": "Repérez un article qui vous plaît ? Appuyez sur le petit cœur pour l’ajouter instantanément à votre liste de favoris et ne jamais perdre de vue vos pépites.",
+    "validate_cart_title": "Validez votre panier en un rien de temps",
+    "validate_cart_description": "Et voilà, c’est aussi simple que ça et le paiement se fait à la livraison.",
+    "receive_package_title": "Recevez votre colis sans effort",
+    "receive_package_description": "Une fois votre commande confirmée, un livreur se chargera de vous remettre votre colis directement chez vous. SHOP<span class=\"color\">IN</span> rend votre shopping aussi pratique que plaisant !",
+    "general_conditions_title": "Conditions générales",
+    "registration_title": "Inscription sur le site:",
+    "registration_description": "Lors de l’inscription sur le site SHOP<span class=\"color\">IN</span>, l’utilisateur devra remplir un formulaire contenant son nom, prénom, son pseudonyme, son e-mail, son numéro de téléphone et sa date de naissance. L’utilisateur peut modifier ou supprimer son compte à tout moment.",
+    "seller_commission_intro": "Le vendeur autorise SHOP<span class=\"color\">IN</span> à retenir sur le prix total de l’article une commission déterminée comme suit :",
+    "luxury_brand_commission": "Marque de luxe (SHOP<span class=\"color\">IN</span> Luxury) : 10% du prix de l’article",
+    "other_category_commission": "Toute autre catégorie : 7% du prix de l’article",
+    "delivery_fees_not_included": "Les frais de livraison ne sont pas inclus dans la base de calcul des commissions. Une fois l’article reçu par l’acheteur/l’acheteuse, SHOP<span class=\"color\">IN</span> versera au vendeur le prix de l’article diminué de la commission dans un délai de 3 jours. Pour recevoir son argent, le vendeur/la vendeuse doit fournir des justificatifs de son identité et de ses données bancaires accompagnés de leur photo pour faire les vérifications nécessaires (CIN et RIB).",
+    "confidentiality_title": "3. Confidentialité:",
+    "confidentiality_content": "SHOP<span class=\"color\">IN</span> recueille, stocke et utilise certaines données personnelles des utilisateurs (nom, prénom, numéro de téléphone, ville et e-mail) ainsi que les données de localisation des utilisateurs. SHOPIN garantit que les informations personnelles des utilisateurs sont protégées contre toute activité illégale.",
+    "cookies_title": "4. Cookies:",
+    "cookies_content": "Le site utilise des cookies pour distinguer les utilisateurs/visiteurs des autres utilisateurs du site afin d’aider SHOP<span class=\"color\">IN</span> à améliorer leur expérience lorsqu’ils naviguent sur le site.",
+    "articles_for_sale_title": "5. Articles à vendre:",
+    "articles_for_sale_content": "Le vendeur / La vendeuse s’engage à ce que tout article exposé à la vente ne comporte pas de défauts (tâche, trou ou déchirure…). L’acheteur / L’acheteuse ayant reçu un article dans cet état, dispose d’un droit de retour de ce dernier. Il est interdit de revendre des articles de contrefaçon ou interdits à la vente par la loi. Le vendeur / la vendeuse s’engage à fournir des photos réelles de son article mis en vente. La description de cet article doit correspondre à ses caractéristiques effectives. SHOP<span class=\"color\">IN</span> a le plein droit de demander au vendeur / à la vendeuse de changer ou supprimer son Annonce/ ou de l’informer que SHOP<span class=\"color\">IN</span> le fera directement en cas d’erreur (exemple erreur de catégorie).",
+
+    "return_title": "6. Retour:",
+    "return_content": "En cas d’échec de livraison le vendeur / la vendeuse doit se montrer disponible pour réceptionner son article retourné.",
+    "luxury_title": "7. SHOP<span class=\"color\">IN</span> Luxury:",
+    "luxury_description": "Un article qui appartient à la catégorie SHOP<span class=\"color\">IN</span> LUXURY doit :",
+    "luxury_price_condition": "dépasser 800 <sup>{{ __('currency') }}</sup>",
+    "luxury_authentication_condition": "être authentifié avant de le livrer à l’acheteur",
+    "luxury_category_condition": "Un article qui appartient à la catégorie SHOP<span class=\"color\">IN</span> LUXURY sera :",
+    "luxury_symbol_authentication": "authentifié par un symbole",
+    "luxury_sale_steps": "Étapes de vente d’un article qui appartient à la catégorie SHOP<span class=\"color\">IN</span> LUXURY :",
+    "luxury_publish_item": "Publier l’article de luxe à vendre",
+    "luxury_purchase_confirmation": "Après confirmation de l’achat, notre équipe vous informera de la vente et un rendez-vous sera fixé pour le pick-up",
+    "luxury_item_authentication": "L’article sera authentifié par notre équipe",
+    "luxury_item_delivery": "Si l’article est authentique, il sera livré dans un délai de 3 jours",
+    "luxury_payment_confirmation": "Après la réception de l’article par l’acheteur / l’acheteuse, votre paiement sera versé dans votre compte après 24 heures",
+    "luxury_return_policy": "Politique de retour des articles de la catégorie SHOP<span class=\"color\">IN</span> LUXURY :",
+    "luxury_authentication_policy": "SHOP<span class=\"color\">IN</span> maintient une politique de rigueur envers les contrefaçons. Si par hasard nous recevons des produits falsifiés, des articles défectueux, des duplicatas illicites (copiés, reproduits ou manufacturés de manière illégale) ou tout article enfreignant les droits de propriété intellectuelle, notre équipe contactera la vendeuse par mail ou téléphone, pour l’informer du retour de l’article en lui présentant des preuves concluantes de la contrefaçon et la commande sera résiliée, et l'article sera éradiqué de façon permanente du catalogue de SHOP<span class=\"color\">IN</span>. Les frais de retour et d'authentification, totalisant 120 dirhams, seront à la charge du vendeur/euse. Nous consignons les informations du vendeur/euse, lui interdisant toute nouvelle vente de produits contrefaits. Pour éviter tout inconvénient, la vendeuse doit soumettre des documents authentiques et inchangés tels que le certificat d'authenticité, la facture ou l'étiquette de prix. Les acheteuses sont encouragées à lire attentivement la description complète de l'article et à demander dans la section des commentaires si l’article est authentique ou une réplique."
 
 
 
