fix-en-trans-file

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -210,7 +210,8 @@
     "luxury_item_delivery": "إذا كان العنصر أصليًا، سيتم تسليمه خلال 3 أيام",
     "luxury_payment_confirmation": "بعد استلام العنصر من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
     "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">إن</span> LUXURY:",
-    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">إن</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">إن</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة."
+    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">إن</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">إن</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة.",
+     "Mode voyage": "وضع السفر"
 
 
 
